mydrawlenguage/src/main/java/org/caferrerb/drawer/parser/MyNewGrammar.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */options{  static = true;}PARSER_BEGIN(MyNewGrammar)package org.caferrerb.drawer.parser;

public class MyNewGrammar{  public void run(String codigo) throws Exception {
	MyNewGrammar.dibujo();
  }}PARSER_END(MyNewGrammar)SKIP :{  " "| "\r"| "\t"| "\n"}TOKEN : /* OPERATORS */{  < PAR_ABIERTO : "(" >| < PAR_CERRADO : ")" >| < ASIGNACION : "=" >| < COMA : "," >}TOKEN :{  < NUMERO : ([ "0"-"9" ])+ >| < CIRCULO : "circulo" >
| < RECTANGULO : "rectangulo" >
| < PUNTO : "punto" >
| < IDENTIFICADOR : ([ "a"-"z" ])+ >}void dibujo() :{}{  (    circulo() | asignacion() | rectangulo()
  )*}

void x() :
{int a =0;}
{
  < IDENTIFICADOR >  | < NUMERO >
}

void punto() :
{}
{
  < PUNTO > <PAR_ABIERTO >
  (< IDENTIFICADOR > | < NUMERO >)
  < COMA >
  (< IDENTIFICADOR > | < NUMERO >)
  <PAR_CERRADO >
}

void circulo() :
{}
{
  < CIRCULO ><PAR_ABIERTO >
  punto() < COMA > ( < NUMERO > | < IDENTIFICADOR >)
  <PAR_CERRADO >
}

void asignacion() :
{}
{
  < IDENTIFICADOR > <ASIGNACION > ( < NUMERO > | < IDENTIFICADOR >) 
}

void rectangulo() :
{}
{
  < RECTANGULO ><PAR_ABIERTO >
  punto() < COMA > punto()
  <PAR_CERRADO >
}
